--- a/index.html
+++ b/index.html
@@ -137,10 +137,9 @@
     <div class="columns is-centered">
       <div class="column is-four-fifths has-text-centered">
         <h2 class="title is-3">Introduction</h2>
-        <video controls style="max-width: 100%; margin-bottom: 1.5rem;">
-          <source src="static/images/pull-vid.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+        <div class="video-responsive">
+          <iframe src="https://www.youtube.com/embed/w3bzwtXOdiM" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
     <div class="columns is-centered">
@@ -199,10 +198,9 @@
     <div class="columns is-centered">
       <div class="column is-full has-text-centered">
         <h2 class="title is-3">Preference Data</h2>
-        <video controls style="width: 100%; height: auto; margin-bottom: 1.5rem;">
-          <source src="static/images/pref-chain-example.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+        <div class="video-responsive">
+          <iframe src="https://www.youtube.com/embed/my_6_gdmXqk" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
     <div class="columns is-centered">
@@ -297,17 +295,15 @@
     <div class="columns is-centered">
       <div class="column is-full has-text-centered">
         <h2 class="title is-3">Long Horizon Action Primitives: Sim and Real</h2>
-        <video controls style="width: 100%; height: auto; margin-bottom: 0.5rem;">
-          <source src="static/images/long-horizon-sim.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+        <div class="video-responsive">
+          <iframe src="https://www.youtube.com/embed/WyA-HxKSrEw" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+        </div>
         <div style="margin-bottom: 2rem;">
           <span class="is-size-5" style="display: block; text-align: center;"><b>Long horizon action primitives setting in simulation.</b></span>
         </div>
-        <video controls style="width: 100%; height: auto; margin-bottom: 0.5rem;">
-          <source src="static/images/long-horizon-real.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+        <div class="video-responsive">
+          <iframe src="https://www.youtube.com/embed/f89WMxixuHM" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+        </div>
         <div>
           <span class="is-size-5" style="display: block; text-align: center;"><b>Long horizon action primitives setting on real robot.</b> State-based observation, determined with FoundationPose. We don't observe any sim2real gap - assuming a correct state, all action primitive-based policies were trained in simulation and transferred without degradation to the real robot.</span>
         </div>
