--- a/index.html
+++ b/index.html
@@ -68,44 +68,33 @@
                 <img src="./static/images/rosetta-stone.png" width="60" style="vertical-align: -15%; margin-right: 5px;"/>
                 <span>ROSETTA</span>
             </h1>
-            <h2 class="subtitle is-2 publication-subtitle">
+            <h2 class="subtitle is-2 publication-subtitle" style="font-family: 'Google Sans', 'Noto Sans', 'Castoro', sans-serif;">
                 Constructing Code-Based Reward from Unconstrained Language Preference
             </h2>
             <div class="is-size-5 publication-authors" style="margin-top: 2.5em;">
                 <a href="https://www.linkedin.com/in/sanjana-srivastava5/" target="_blank">Sanjana Srivastava<span title="Equal contribution" style="color: #f39c12;">&#9733;</span></a><sup>1</sup>,
                 <a href="https://jameskrw.github.io/" target="_blank">Kangrui Wang<span title="Equal contribution" style="color: #f39c12;">&#9733;</span></a><sup>2</sup>,
                 <a href="https://github.com/JerryYC" target="_blank">Yung-Chieh Chan<span title="Equal contribution" style="color: #f39c12;">&#9733;</span></a><sup>1</sup>,
-                <a href="https://rogerdai1217.github.io/" target="_blank">Tianyuan Dai</a><sup>1</sup>,
+                <a href="https://rogerdai1217.github.io/" target="_blank">Tianyuan Dai</a><sup>3</sup>,
                 <a href="https://limanling.github.io/" target="_blank">Manling Li</a><sup>2</sup>,
                 <a href="https://ai.stanford.edu/~zharu/" target="_blank">Ruohan Zhang</a><sup>1</sup>,
                 <a href="https://mxu34.github.io/" target="_blank">Mengdi Xu</a><sup>1</sup>,
-                <a href="https://jiajunwu.com/" target="_blank">Jiajun Wu</a><sup>1</sup>,
-                <a href="https://www.linkedin.com/in/fei-fei-li-4541247/" target="_blank">Li Fei-Fei</a><sup>1</sup>
+                <a href="https://jiajunwu.com/" target="_blank">Jiajun Wu</a><sup>1,4</sup>,
+                <a href="https://www.linkedin.com/in/fei-fei-li-4541247/" target="_blank">Li Fei-Fei</a><sup>1,4</sup>
             </div>
-            <div class="is-size-6 publication-affiliations" style="margin-top: 0.5em;">
-              <sup>1</sup>Department of Computer Science, Stanford University<br>
-              <sup>2</sup>Department of Computer Science, Northwestern University
+            <div class="is-size-6 publication-affiliations" style="margin-top: 0.5em; font-family: 'Google Sans', 'Noto Sans', 'Castoro', sans-serif;">
+              <sup>1</sup>Stanford University &nbsp; <sup>2</sup>Northwestern University &nbsp; <sup>3</sup>University of Texas Austin &nbsp; <sup>4</sup>Stanford Institute for Human-Centered AI
             </div>
             <div class="column has-text-centered">
-                <div class="publication-links">
-                    <!-- arXiv link will be added later -->
-                    <span class="link-block">
-                        <a href="#" class="external-link button is-normal is-rounded is-dark" style="display: none;">
-                            <span class="icon">
-                                <i class="ai ai-arxiv"></i>
-                            </span>
-                            <span>arXiv</span>
-                        </a>
-                    </span>
-                    <!-- Twitter thread link will be added later -->
-                    <span class="link-block">
-                        <a href="#" class="external-link button is-normal is-rounded is-dark" style="display: none;">
-                            <span class="icon">
-                                <i class="fab fa-twitter"></i>
-                            </span>
-                            <span>Twitter</span>
-                        </a>
-                    </span>
+                <div class="publication-links" style="margin-top: 2em; font-family: 'Google Sans', 'Noto Sans', 'Castoro', sans-serif;">
+                  <a href="https://github.com/StanfordVL/rosetta/blob/main/preprint.pdf" target="_blank" class="button is-dark is-rounded" style="margin-right: 0.7em; font-size: 1.05rem; padding: 0.5em 1.3em;">
+                    <span class="icon" style="font-size: 1.1em;"><i class="ai ai-arxiv"></i></span>
+                    <span>preprint</span>
+                  </a>
+                  <a href="https://github.com/StanfordVL/rosetta" target="_blank" class="button is-dark is-rounded" style="font-size: 1.05rem; padding: 0.5em 1.3em;">
+                    <span class="icon" style="font-size: 1.1em;"><i class="fab fa-github"></i></span>
+                    <span>code</span>
+                  </a>
                 </div>
             </div>
           </div>
