--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 
-  <section class="hero">
+  <section class="hero" style="background: #fff3f8;">
     <div class="hero-body">
       <div class="container is-max-desktop">
         <div class="columns is-centered">
